@@ -1,3 +1,6 @@
+2017/09/17 v199
+	1. Add quest mark on nameplates.
+
 2017/09/10 v197
 	1. Fix a alpha error caused by button recycle.
 
